--- a/public/css/business.css
+++ b/public/css/business.css
@@ -36,5 +36,5 @@ body {
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(https://smallenvelop.com/wp-content/uploads/2014/08/Preloader_11.gif) center no-repeat #fff;
+	background: url('../img/Preloader_11.gif') center no-repeat #fff;
 }
