--- a/public/css/business.css
+++ b/public/css/business.css
@@ -14,7 +14,9 @@ body {
   background-position: center;
   background-size: cover;
   padding-bottom: 100px;
+  overflow-x: hidden;
 }
+
 .footer {
     position: fixed;
     left: 0;
@@ -58,10 +60,8 @@ body {
 
 #login-div{
   background-color: rgb(250, 239, 223);
-  width: 600px;
   padding: 10px;
-}
-#login-div::before{
+
     opacity: 0.65;
 }
 
@@ -74,8 +74,8 @@ body {
 }
 
 #h-page{
-  height: 850px;
-  width: auto;
+  /* height: 850px; */
+  /* width: auto; */
 }
 
 #n-page{
@@ -89,8 +89,8 @@ body {
   height: 50%;
   width: auto;
   padding-top: 4%;
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 0.5%;
+  padding-right: 0.5;
   display: block;
   object-fit: contain;
   background-color:rgb(255, 255, 255);
