--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,4 @@ $fa-font-path:        "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/regular";
+$carousel-control-color: #7b277d;
